--- a/sites/Thomass-MBP/Makefile_runtime_packet_cpp
+++ b/sites/Thomass-MBP/Makefile_runtime_packet_cpp
@@ -68,6 +68,7 @@ SRCS       = \
     $(SRCDIR)/ThreadTeamRunningClosed.cpp \
     $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
     $(SRCDIR)/DataItemSplitter.cpp \
+    $(TESTBASEDIR)/errorEstBlank.cpp \
     $(TESTBASEDIR)/setInitialConditions_block.cpp \
     $(TESTBASEDIR)/computeLaplacianDensity_block.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy_block.cpp \
