(Issue #8) At one point, I wanted to use an OpenACC runtime routine from within a CUDA file.  As part of this, I needed to inform nvcc where to find PGI's openacc.h file.  As part of this I discovered that nvcc was using the default 4.8.5 gcc Summit compiler as the backend.  In order to set pgc++ as the backend, I had to rollball the PGI version to 19.  I could have used 20 with CUDA 11, but there were issues with this as this might be too close to the bleeding edge.
Built up the installation for this PGI version with the SW stack now largely set
to the default versions of the various modules used.  This, indeed, seems like a
reasonable setup.

Note that I am also now using CUDA 10.  I realized that the -ta flags used
before were 10.1 despite the fact that I was using CUDA 9.  Note clear if this
was causing issues before.

--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -1,6 +1,6 @@
 SHELL=/bin/sh
 
-# TODO: Redo this with more care.  Make certain that template .h/.cpp dependencies are correct
+# TODO: Redo this with more care.  Switch to CMAKE?
 
 BASE         = test_runtime_cuda
 MAKEFILE     = Makefile_runtime_cuda
@@ -8,8 +8,9 @@ BASEDIR      = ../..
 INCDIR       = $(BASEDIR)/includes
 SRCDIR       = $(BASEDIR)/src
 TESTDIR      = $(BASEDIR)/test/RuntimeCuda
-AMREXDIR     = $(HOME)/local/pgi_20.1/AMReX_2d
+AMREXDIR     = $(HOME)/local/pgi_19.9/AMReX_2d
 CUDADIR      = $(OLCF_CUDA_ROOT)
+PGIDIR       = $(OLCF_PGI_ROOT)/linuxpower/19.9
 
 # Common files
 CXX_HDRS   = \
@@ -74,11 +75,11 @@ CXXFLAGS  = -g -O0 -traceback -std=c++11  -I$(INCDIR) -I$(TESTDIR) -I$(AMREXDIR)
 CXXWARNS  =
 
 CU        = nvcc
-CUFLAGS   = -g -O0 -std=c++11 -m64 -gencode arch=compute_70,code=sm_70 -I$(INCDIR) -I$(TESTDIR) -I$(AMREXDIR)/include -D__PGI
+CUFLAGS   = -ccbin=pgc++ -g -O0 -std=c++11 -m64 -gencode arch=compute_70,code=sm_70 -I$(PGIDIR)/include -I$(INCDIR) -I$(TESTDIR) -I$(AMREXDIR)/include -D__PGI
 CUWARNS   =
 
 LIBS      = -lstdc++ -pgf90libs -lamrex -lcudart
-LDFLAGS   = -L$(AMREXDIR)/lib -L$(CUDADIR)/lib64 -L$(OLCF_PGI_ROOT)/linuxpower/20.1/lib
+LDFLAGS   = -L$(AMREXDIR)/lib -L$(CUDADIR)/lib64 -L$(PGIDIR)/lib
 
 ifdef DEBUG
 CXXFLAGS := $(CXXFLAGS) -DDEBUG_RUNTIME
