(Issue #8) Moved the device-to-host and unpacking out in to a class that could be used in a thread team configuration.  This is a good step, but this class is hacked in to the test code.

--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -38,6 +38,7 @@ CXX_HDRS   = \
     $(TESTDIR)/cudaTestConstants.h
 CU_HDRS   = \
     $(INCDIR)/CudaDataPacket.h \
+    $(INCDIR)/CudaMoverUnpacker.h \
     $(INCDIR)/CudaStream.h \
     $(INCDIR)/CudaStreamManager.h \
     $(INCDIR)/CudaRuntime.h
@@ -62,6 +63,7 @@ SRCS       = \
     $(TESTDIR)/gpuKernel.cpp
 CU_SRCS       = \
     $(SRCDIR)/CudaDataPacket.cu \
+    $(SRCDIR)/CudaMoverUnpacker.cu \
     $(SRCDIR)/CudaStreamManager.cu \
     $(SRCDIR)/CudaRuntime.cu \
     $(TESTDIR)/testCudaKernel.cu
