(Issue #8) Implemented pinned and device memory pools so that no dynamic allocation/deallocation happens during the computation section of the test. While this class is called a memory manager, it isn't.  This helped increase the number of kernels running simultaneously.

--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -41,6 +41,7 @@ CU_HDRS   = \
     $(INCDIR)/CudaMoverUnpacker.h \
     $(INCDIR)/CudaStream.h \
     $(INCDIR)/CudaStreamManager.h \
+    $(INCDIR)/CudaMemoryManager.h \
     $(INCDIR)/CudaRuntime.h
 SRCS       = \
     $(SRCDIR)/RuntimeElement.cpp \
@@ -65,6 +66,7 @@ CU_SRCS       = \
     $(SRCDIR)/CudaDataPacket.cu \
     $(SRCDIR)/CudaMoverUnpacker.cu \
     $(SRCDIR)/CudaStreamManager.cu \
+    $(SRCDIR)/CudaMemoryManager.cu \
     $(SRCDIR)/CudaRuntime.cu \
     $(TESTDIR)/testCudaKernel.cu
 
