first implementation of FArray1D

--- a/sites/Thomass-MBP/Makefile_grid_cpp
+++ b/sites/Thomass-MBP/Makefile_grid_cpp
@@ -50,6 +50,7 @@ SRCS       = \
     $(SRCDIR)/Grid_RealVect.cpp \
     $(SRCDIR)/Grid_AmrCoreFlash.cpp \
     $(SRCDIR)/FArray4D.cpp \
+    $(SRCDIR)/FArray1D.cpp \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/TileAmrex.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
