--- a/sites/Thomass-MBP/Makefile_runtime_packet_cpp
+++ b/sites/Thomass-MBP/Makefile_runtime_packet_cpp
@@ -52,6 +52,7 @@ CXX_HDRS   = \
     $(TESTDIR)/constants.h
 SRCS       = \
     $(SRCDIR)/FArray4D.cpp \
+    $(SRCDIR)/FArray1D.cpp \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/TileAmrex.cpp \
     $(SRCDIR)/Grid_IntVect.cpp \
