(Issue #8) After Tom's update to IntVect, the DataPacket can now copy these objects directly into the data packet (no internal arrays).  Updated the test kernel to use the IntVect and found no regression.

--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -24,6 +24,7 @@ CXX_HDRS   = \
     $(INCDIR)/ThreadTeamRunningOpen.h \
     $(INCDIR)/ThreadTeamRunningClosed.h \
     $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
+    $(INCDIR)/FArray1D.h \
     $(INCDIR)/FArray4D.h \
     $(INCDIR)/Tile.h \
     $(INCDIR)/TileAmrex.h \
@@ -51,6 +52,7 @@ SRCS       = \
     $(SRCDIR)/ThreadTeamRunningOpen.cpp \
     $(SRCDIR)/ThreadTeamRunningClosed.cpp \
     $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
+    $(SRCDIR)/FArray1D.cpp \
     $(SRCDIR)/FArray4D.cpp \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/TileAmrex.cpp \
