--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -43,7 +43,7 @@ CXX_HDRS   = \
     $(TESTBASEDIR)/computeLaplacianDensity_packet.h \
     $(TESTBASEDIR)/computeLaplacianEnergy_block.h \
     $(TESTBASEDIR)/computeLaplacianEnergy_packet.h \
-    $(TESTBASEDIR)/scaleEnergy_block.h \
+    $(TESTBASEDIR)/scaleEnergy.h \
     $(TESTBASEDIR)/Analysis.h
 CU_HDRS   = \
     $(INCDIR)/CudaDataPacket.h \
@@ -76,7 +76,7 @@ SRCS       = \
     $(TESTBASEDIR)/computeLaplacianDensity_packet.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy_block.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy_packet.cpp \
-    $(TESTBASEDIR)/scaleEnergy_block.cpp \
+    $(TESTBASEDIR)/scaleEnergy.cpp \
     $(TESTBASEDIR)/Analysis.cpp
 CU_SRCS       = \
     $(SRCDIR)/CudaDataPacket.cu \
