(Issue #8) Added tile-based action routines for the static Laplacian routines. Converted the test to all CPU to confirm that these are working.
I can't yet use these to revive the other non-CUDA runtime tests as the DataItem
class is linked to CudaStream at the moment.

--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -70,10 +70,10 @@ SRCS       = \
     $(SRCDIR)/OrchestrationLogger.cpp \
     $(SRCDIR)/CudaStream.cpp \
     $(TESTBASEDIR)/setInitialConditions_block.cpp \
-    $(TESTBASEDIR)/computeLaplacianDensity_oacc_summit.cpp \
-    $(TESTBASEDIR)/computeLaplacianDensity_packet_oacc_summit.cpp \
-    $(TESTBASEDIR)/computeLaplacianEnergy_oacc_summit.cpp \
-    $(TESTBASEDIR)/computeLaplacianEnergy_packet_oacc_summit.cpp \
+    $(TESTBASEDIR)/computeLaplacianDensity.cpp \
+    $(TESTBASEDIR)/computeLaplacianDensity_tile_cpu.cpp \
+    $(TESTBASEDIR)/computeLaplacianEnergy.cpp \
+    $(TESTBASEDIR)/computeLaplacianEnergy_tile_cpu.cpp \
     $(TESTBASEDIR)/scaleEnergy.cpp \
     $(TESTBASEDIR)/scaleEnergy_tile_cpu.cpp \
     $(TESTBASEDIR)/Analysis.cpp
