(Issue #8) Improved by a significant amount the design of the DataPacket.  The packet-based patch code (action routine wrappers) is now much simpler and isn't exposed to the packing of the packet.  In addition, the code that packs the packet is more localized and hopefully easier to update.
Added the packet/GPU version of the scale kernel.  This has not been tested and
I have had issues earlier with the contents of the coordinate data.

--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -72,10 +72,16 @@ SRCS       = \
     $(TESTBASEDIR)/setInitialConditions_block.cpp \
     $(TESTBASEDIR)/computeLaplacianDensity.cpp \
     $(TESTBASEDIR)/computeLaplacianDensity_tile_cpu.cpp \
+    $(TESTBASEDIR)/computeLaplacianDensity_oacc_summit.cpp \
+    $(TESTBASEDIR)/computeLaplacianDensity_packet_oacc_summit.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy_tile_cpu.cpp \
+    $(TESTBASEDIR)/computeLaplacianEnergy_oacc_summit.cpp \
+    $(TESTBASEDIR)/computeLaplacianEnergy_packet_oacc_summit.cpp \
     $(TESTBASEDIR)/scaleEnergy.cpp \
     $(TESTBASEDIR)/scaleEnergy_tile_cpu.cpp \
+    $(TESTBASEDIR)/scaleEnergy_oacc_summit.cpp \
+    $(TESTBASEDIR)/scaleEnergy_packet_oacc_summit.cpp \
     $(TESTBASEDIR)/Analysis.cpp
 CU_SRCS       = \
     $(SRCDIR)/CudaDataPacket.cu \
