--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -8,7 +8,7 @@ BASEDIR      = ../..
 INCDIR       = $(BASEDIR)/includes
 SRCDIR       = $(BASEDIR)/src
 TESTBASEDIR  = $(BASEDIR)/test/Base
-TESTDIR      = $(BASEDIR)/test/RuntimeCuda
+TESTDIR      = $(BASEDIR)/test/Runtime
 AMREXDIR     = $(HOME)/local/pgi_19.9/AMReX_2d
 GTESTDIR     = $(HOME)/local/pgi_19.9/googletest
 CUDADIR      = $(OLCF_CUDA_ROOT)
@@ -92,8 +92,8 @@ SRCS       = \
     $(TESTBASEDIR)/scaleEnergy_oacc_summit.cpp \
     $(TESTBASEDIR)/scaleEnergy_packet_oacc_summit.cpp \
     $(TESTBASEDIR)/Analysis.cpp \
-    $(TESTDIR)/testCudaKernel.cpp \
-    $(TESTDIR)/runCudaTests.cpp
+    $(TESTDIR)/testRuntime.cpp \
+    $(TESTDIR)/runRuntimeTests.cpp
 CU_SRCS       = \
     $(SRCDIR)/CudaGpuEnvironment.cu \
     $(SRCDIR)/CudaDataPacket.cu \
