(Issue #8) Updated the thread team test on GCE so that it build and runs.

--- a/sites/gce/Makefile_threadteam_cpp
+++ b/sites/gce/Makefile_threadteam_cpp
@@ -15,9 +15,10 @@ GTESTDIR     = $(HOME)/local/intel_19.0/googletest
 CXX_HDRS   = \
     $(INCDIR)/actionRoutine.h \
     $(INCDIR)/OrchestrationLogger.h \
-    $(INCDIR)/ThreadTeamModes.h \
     $(INCDIR)/DataItem.h \
     $(INCDIR)/RuntimeElement.h \
+    $(INCDIR)/ThreadTeamModes.h \
+    $(INCDIR)/ThreadTeamBase.h \
     $(INCDIR)/ThreadTeam.h \
     $(INCDIR)/ThreadTeamState.h \
     $(INCDIR)/ThreadTeamIdle.h \
