(Issue #8) Revived tests for site hello.

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ sites/*/gather_data_cpp_*_*.x
 sites/*/gather_data_F2003.x
 sites/*/gather_data_F2003_*_*.x
 sites/*/binaries
-sites/hello/manual_cpp.x
+sites/hello/*.x
 sites/hello/*.dat
 sites/gce/*.dat
 sites/gce/*.log
