--- a/sites/hello/Makefile_runtime_cpu_cpp
+++ b/sites/hello/Makefile_runtime_cpu_cpp
@@ -2,18 +2,29 @@ SHELL=/bin/sh
 
 # TODO: Redo this with more care.  Make certain that template .h/.cpp dependencies are correct
 
-BASE         = test_runtime_tile_cpp
-MAKEFILE     = Makefile_runtime_tile_cpp
+BASE         = test_runtime_cpu_cpp
+MAKEFILE     = Makefile_runtime_cpu_cpp
 BASEDIR      = ../..
 INCDIR       = $(BASEDIR)/includes
 SRCDIR       = $(BASEDIR)/src
 TESTBASEDIR  = $(BASEDIR)/test/Base
-TESTDIR      = $(BASEDIR)/test/RuntimeTile
+TESTDIR      = $(BASEDIR)/test/Runtime
 AMREXDIR     = $(HOME)/local/gcc_6.5.0/AMReX_2D
 GTESTDIR     = /usr/local/spack/opt/spack/darwin-highsierra-x86_64/gcc-6.5.0/googletest-1.8.1-6y5spjfzq4uiazxbcb7sw3qrloxbrhgw
 
 # Common files
 CXX_HDRS   = \
+    $(INCDIR)/RuntimeElement.h \
+    $(INCDIR)/ThreadTeamModes.h \
+    $(INCDIR)/ThreadTeamDataType.h \
+    $(INCDIR)/ThreadTeam.h \
+    $(INCDIR)/ThreadTeamState.h \
+    $(INCDIR)/ThreadTeamIdle.h \
+    $(INCDIR)/ThreadTeamTerminating.h \
+    $(INCDIR)/ThreadTeamRunningOpen.h \
+    $(INCDIR)/ThreadTeamRunningClosed.h \
+    $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
+    $(INCDIR)/FArray1D.h \
     $(INCDIR)/FArray4D.h \
     $(INCDIR)/Tile.h \
     $(INCDIR)/TileAmrex.h \
@@ -25,40 +36,16 @@ CXX_HDRS   = \
     $(INCDIR)/GridAmrex.h \
     $(INCDIR)/Grid_AmrCoreFlash.h \
     $(INCDIR)/actionRoutine.h \
-    $(INCDIR)/OrchestrationLogger.h \
-    $(INCDIR)/OrchestrationRuntime.h \
-    $(INCDIR)/DataItem.h \
-    $(INCDIR)/RuntimeElement.h \
-    $(INCDIR)/ThreadTeamModes.h \
-    $(INCDIR)/ThreadTeamDataType.h \
-    $(INCDIR)/ThreadTeam.h \
-    $(INCDIR)/ThreadTeamState.h \
-    $(INCDIR)/ThreadTeamIdle.h \
-    $(INCDIR)/ThreadTeamTerminating.h \
-    $(INCDIR)/ThreadTeamRunningOpen.h \
-    $(INCDIR)/ThreadTeamRunningClosed.h \
-    $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
-    $(INCDIR)/DataItemSplitter.h \
-    $(INCDIR)/ActionBundle.h \
     $(INCDIR)/RuntimeAction.h \
-    $(TESTBASEDIR)/setInitialConditions_block.h \
-    $(TESTBASEDIR)/computeLaplacianDensity_block.h \
-    $(TESTBASEDIR)/computeLaplacianEnergy_block.h \
-    $(TESTBASEDIR)/scaleEnergy_block.h \
-    $(TESTBASEDIR)/Analysis.h \
-    $(TESTDIR)/Flash.h \
-    $(TESTDIR)/constants.h
+    $(INCDIR)/DataItem.h \
+    $(INCDIR)/OrchestrationLogger.h \
+    $(INCDIR)/Runtime.h \
+    $(TESTBASEDIR)/setInitialConditions.h \
+    $(TESTBASEDIR)/computeLaplacianDensity.h \
+    $(TESTBASEDIR)/computeLaplacianEnergy.h \
+    $(TESTBASEDIR)/scaleEnergy.h \
+    $(TESTBASEDIR)/Analysis.h
 SRCS       = \
-    $(SRCDIR)/FArray4D.cpp \
-    $(SRCDIR)/Tile.cpp \
-    $(SRCDIR)/TileAmrex.cpp \
-    $(SRCDIR)/Grid.cpp \
-    $(SRCDIR)/GridAmrex.cpp \
-    $(SRCDIR)/Grid_AmrCoreFlash.cpp \
-    $(SRCDIR)/Grid_IntVect.cpp \
-    $(SRCDIR)/Grid_RealVect.cpp \
-    $(SRCDIR)/OrchestrationLogger.cpp \
-    $(SRCDIR)/OrchestrationRuntime.cpp \
     $(SRCDIR)/RuntimeElement.cpp \
     $(SRCDIR)/ThreadTeam.cpp \
     $(SRCDIR)/ThreadTeamIdle.cpp \
@@ -66,14 +53,28 @@ SRCS       = \
     $(SRCDIR)/ThreadTeamRunningOpen.cpp \
     $(SRCDIR)/ThreadTeamRunningClosed.cpp \
     $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
-    $(SRCDIR)/DataItemSplitter.cpp \
-    $(TESTBASEDIR)/setInitialConditions_block.cpp \
-    $(TESTBASEDIR)/computeLaplacianDensity_block.cpp \
-    $(TESTBASEDIR)/computeLaplacianEnergy_block.cpp \
-    $(TESTBASEDIR)/scaleEnergy_block.cpp \
+    $(SRCDIR)/FArray1D.cpp \
+    $(SRCDIR)/FArray4D.cpp \
+    $(SRCDIR)/Tile.cpp \
+    $(SRCDIR)/TileAmrex.cpp \
+    $(SRCDIR)/Grid_IntVect.cpp \
+    $(SRCDIR)/Grid_RealVect.cpp \
+    $(SRCDIR)/Grid.cpp \
+    $(SRCDIR)/GridAmrex.cpp \
+    $(SRCDIR)/Grid_AmrCoreFlash.cpp \
+    $(SRCDIR)/OrchestrationLogger.cpp \
+    $(SRCDIR)/Runtime.cpp \
+    $(TESTBASEDIR)/setInitialConditions.cpp \
+    $(TESTBASEDIR)/setInitialConditions_tile_cpu.cpp \
+    $(TESTBASEDIR)/computeLaplacianDensity.cpp \
+    $(TESTBASEDIR)/computeLaplacianDensity_tile_cpu.cpp \
+    $(TESTBASEDIR)/computeLaplacianEnergy.cpp \
+    $(TESTBASEDIR)/computeLaplacianEnergy_tile_cpu.cpp \
+    $(TESTBASEDIR)/scaleEnergy.cpp \
+    $(TESTBASEDIR)/scaleEnergy_tile_cpu.cpp \
     $(TESTBASEDIR)/Analysis.cpp \
-    $(TESTDIR)/testRuntimeTile.cpp \
-    $(TESTDIR)/runRuntimeCppTest.cpp
+    $(TESTDIR)/testRuntime.cpp \
+    $(TESTDIR)/runRuntimeTests.cpp
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 COMMAND   =  $(BASE).x
