--- a/sites/summit/Makefile_gatherData_F2003
+++ b/sites/summit/Makefile_gatherData_F2003
@@ -12,6 +12,7 @@ AMREXDIR = $(HOME)/local/gcc_9.1.0/AMReX_2d
 
 # Common files
 CXX_HDRS   = \
+    $(INCDIR)/FArray1D.h \
     $(INCDIR)/FArray4D.h \
     $(INCDIR)/Tile.h \
     $(INCDIR)/TileAmrex.h \
@@ -22,12 +23,8 @@ CXX_HDRS   = \
     $(INCDIR)/Grid.h \
     $(INCDIR)/GridAmrex.h \
     $(INCDIR)/Grid_AmrCoreFlash.h \
-    $(INCDIR)/DataPacket.h \
     $(INCDIR)/actionRoutine.h \
     $(INCDIR)/OrchestrationLogger.h \
-    $(INCDIR)/OrchestrationRuntime.h \
-    $(INCDIR)/DataItem.h \
-    $(INCDIR)/RuntimeElement.h \
     $(INCDIR)/ThreadTeamModes.h \
     $(INCDIR)/ThreadTeamDataType.h \
     $(INCDIR)/ThreadTeam.h \
@@ -37,12 +34,13 @@ CXX_HDRS   = \
     $(INCDIR)/ThreadTeamRunningOpen.h \
     $(INCDIR)/ThreadTeamRunningClosed.h \
     $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
-    $(INCDIR)/DataItemSplitter.h \
-    $(INCDIR)/ActionBundle.h \
+    $(INCDIR)/DataItem.h \
+    $(INCDIR)/RuntimeElement.h \
     $(INCDIR)/RuntimeAction.h \
-    $(TESTDIR)/Flash.h \
-    $(TESTDIR)/constants.h
+    $(INCDIR)/ActionBundle.h \
+    $(INCDIR)/Runtime.h
 CXX_SRCS       = \
+    $(SRCDIR)/FArray1D.cpp \
     $(SRCDIR)/FArray4D.cpp \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/TileAmrex.cpp \
@@ -52,15 +50,14 @@ CXX_SRCS       = \
     $(SRCDIR)/GridAmrex.cpp \
     $(SRCDIR)/Grid_AmrCoreFlash.cpp \
     $(SRCDIR)/OrchestrationLogger.cpp \
-    $(SRCDIR)/OrchestrationRuntime.cpp \
-    $(SRCDIR)/RuntimeElement.cpp \
     $(SRCDIR)/ThreadTeam.cpp \
     $(SRCDIR)/ThreadTeamIdle.cpp \
     $(SRCDIR)/ThreadTeamTerminating.cpp \
     $(SRCDIR)/ThreadTeamRunningOpen.cpp \
     $(SRCDIR)/ThreadTeamRunningClosed.cpp \
     $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
-    $(SRCDIR)/DataItemSplitter.cpp \
+    $(SRCDIR)/RuntimeElement.cpp \
+    $(SRCDIR)/Runtime.cpp \
     $(SRCDIR)/tile_fi.cpp \
     $(SRCDIR)/grid_fi.cpp \
     $(SRCDIR)/orchestration_runtime_fi.cpp
